--- a/maintemplate.html
+++ b/maintemplate.html
@@ -18,7 +18,7 @@
 </nav>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('fileadmin/templates/rhenania2018/img/home.jpg')">
+<header class="masthead" style="background-image: url('<f:cObject typoscriptObjectPath="lib.pageBgImg" />')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
