--- a/maintemplate.html
+++ b/maintemplate.html
@@ -2,8 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     
   <div class="container">
-    <a class="navbar-brand" href="/"><img src="fileadmin/templates/rhenania2018/img/rhenania-logo.gif" height="45"
-        width="45" /></a>
+    <a class="navbar-brand" href="/"><img src="/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-2d-logo.gif" width="100px" height="100px" /></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
@@ -18,7 +17,7 @@
 </nav>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('<f:cObject typoscriptObjectPath="lib.pageBgImg" />')">
+<header class="masthead" style="{f:cObject(typoscriptObjectPath: 'lib.headerimage')}">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
