new pic and some css changes

--- a/maintemplate.html
+++ b/maintemplate.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-auto">
             {f:cObject(typoscriptObjectPath:'lib.breadcrump')->f:format.raw()}
         </div>
     </div>
