--- a/maintemplate.html
+++ b/maintemplate.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     
   <div class="container">
-    <a class="navbar-brand" href="/"><img src="/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-2d-logo.gif" /></a>
+    <a class="navbar-brand" href="/"><img src="/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-2d-logo.gif" alt="home"/></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
@@ -38,7 +38,11 @@
 
 <!-- Main Content -->
 <div class="container">
-
+  <div class="row">
+    <div class="col-auto">
+        
+    </div>
+</div>
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <f:format.raw>{contentNormal}</f:format.raw>
