create about me page with resume

--- a/about.html
+++ b/about.html
@@ -1,129 +1,299 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+	<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+		<title>Alice in Wonderland</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<!-- Bootstrap core CSS -->
+		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+		<!-- Custom fonts for this template -->
+		<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+		<link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
-    <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+		<!-- jQuery CDN -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  </head>
+		<!-- Custom styles for this template -->
+		<link href="css/clean-blog.css" rel="stylesheet">
+		<link href="css/about-me.css" rel="stylesheet">
 
-  <body>
+	</head>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="post.html">Sample Post</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+	<body>
 
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/about-bg.jpg')">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+		<!--Navigation bar-->
+		<div id="nav-placeholder"></div>
 
-    <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
-        </div>
-      </div>
-    </div>
+		<!-- Page Header -->
+		<header class="masthead" style="background-image: url('img/about-bg.jpg')">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-md-10 mx-auto">
+						<div class="page-heading">
+							<h1>About Me</h1>
+							<span class="subheading">This is what I do.</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
 
-    <hr>
+		<!-- Main Content -->
+		<div class="wrapper">
+			<div class="main-wrapper">
+				<section class="section-profile">
+					<h2 class="mt-3 section-title">
+						<span class="fa-stack fa-xs">
+							<i class="fas fa-circle fa-stack-2x"></i>
+							<i class="fas fa-user fa-stack-1x fa-inverse"></i>
+						</span>
+						Career Profile
+					</h2>
+					<p>
+						I major in combined business and computer science, as I believe in communication and being able to understand business logic behind the application is important to be a good software developer.  During my university, I spent a year and a half to learn from work. I have several co-op experiences with different companies and perform different roles. 
+					</p>
+				</section>
 
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
-          </div>
-        </div>
-      </div>
-    </footer>
+				<section class="section-skill">
+					<h2 class="section-title">
+						<span class="fa-stack fa-xs">
+							<i class="fas fa-circle fa-stack-2x"></i>
+							<i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
+						</span>
+						Skill and Proficiency
+					</h2>
+					<div class="skillset">
+						<div class="item">
+							<h3 class="level-title">Java/JEE</h3>
+							<div class="level-bar">
+								<div class="level-bar-inner" style="width:80%"></div>
+							</div>
+						</div>
+						<div class="item">
+							<h3 class="level-title">HTML/CSS</h3>
+							<div class="level-bar">
+								<div class="level-bar-inner" style="width:78%"></div>
+							</div>
+						</div>
+						<div class="item">
+							<h3 class="level-title">JavaScript</h3>
+							<div class="level-bar">
+								<div class="level-bar-inner" style="width:73%"></div>
+							</div>
+						</div>
+						<div class="item">
+							<h3 class="level-title">MySQL</h3>
+							<div class="level-bar">
+								<div class="level-bar-inner" style="width:70%"></div>
+							</div>
+						</div>
+					</div>
+				</section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+				<section class="section-experience">
+					<h2 class="section-title">
+						<span class="fa-stack fa-xs">
+							<i class="fas fa-circle fa-stack-2x"></i>
+							<i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
+						</span>
+						Experiences
+					</h2>
+					<div class="work-experience">
+						<div class="meta">
+							<div class="upper-row">
+								<h3 class="job-title">Backend Developer</h3>
+								<div class="time">Sept 2016 – Dec 2016</div>
+							</div> 
+							<div class="company">MediaValet, Vancouver</div>
+						</div>
+						<div class="company-description">MediaValet is a cloud-based digital management system on Azure organizing massive digital assets for global customers.</div>
+						<div class="details">
+							<ul>
+								<li>Developed a next-generation API of related assets using Service Fabric with low-latency and high throughput workloads</li>
+								<li>Implemented a keyword tag feature with different authorization levels for general users and administrators</li>
+								<li>Completed a side project for database disaster recovery, applied Azure scheduler to run weekly full backup with neither additional cost nor human supervision, and presented the solution to CEO, CIO and developer managers</li>
+							</ul>
+						</div>
+					</div>
+					<div class="work-experience">
+						<div class="upper-row">
+							<h3 class="job-title">Automation Developer</h3>
+							<div class="time">Jan 2016 – Sept 2016</div>
+						</div>
+						<div class="company">SAP, Vancouver</div>
+						<div class="company-description">SAP Jam is a social business collaboration cloud solution for over 21.8 million users and large corporate customers.</div>
+						<div class="details">
+							<ul>
+								<li>Maintained and revised 33 automated weekly regression tests for 12 data centers across 4 time zones</li>
+								<li>Ensured a full pass on post deployment automation verification by investigating and fixing flaky tests</li>
+								<li>Accomplished automated JS error test on web pages under parallel running environment, which was accepted into master branch and was demoed in a quarterly feature release meeting to above 100 team members</li>
+								<li>Actively participated in the SAP Jam hackathon in a team of 3, and built a real-time multi-users collaborative white board</li>
+								<li>Wrote test cases for web and mobile new features’ reliability, scalability, consistency and robustness</li>
+							</ul>
+						</div>
+					</div>
+					<div class="work-experience">
+						<div class="upper-row">
+							<h3 class="job-title">Android Developer </h3>
+							<div class="time">Sept 2015 – Dec 2015</div>
+						</div>
+						<div class="company">Axka, Vancouver</div>
+						<div class="company-description">Axka is a start-up company that serves over 120k local registered users and in partnership with over 1000 merchants.</div>
+						<div class="details">
+							<ul>
+								<li>Led a team of 3 to develop an Android app from scratch, which allows coupon status checking by text or QR code</li>
+								<li>Established HTTP requests to retrieve coupon information by JSON objects, such as redeem date, coupon value etc.</li>
+							</ul>
+						</div>
+					</div>
+					<div class="work-experience">
+						<div class="upper-row">
+							<h3 class="job-title">Database Analyst</h3>
+							<div class="time">Jul 2015 – Sept 2015</div>
+						</div>
+						<div class="company">NetEase, Hangzhou</div>
+						<div class="company-description">NetEase is a leading Chinese listed Internet company providing diverse online services to more than 300 million users.</div>
+						<div class="details">
+							<ul>
+								<li>Assisted in collecting and studying user stories under operation and maintenance departments</li>
+								<li>Maintained data dictionaries using MySQL by revising and entering definitions</li>
+							</ul>
+						</div>
+					</div>
+				</section>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+				<section class="section-hackathon">
+					<h2 class="section-title">
+						<span class="fa-stack fa-xs">
+							<i class="fas fa-circle fa-stack-2x"></i>
+							<i class="fas fa-code fa-stack-1x fa-inverse"></i>
+						</span>
+						Coding Competition
+					</h2>
+					<div class="hackathon">
+						<div class="upper-row">
+							<h3 class="job-title">BizHacks 2017</h3>
+							<div class="time">Mar 2017</div>
+						</div>
+						<div class="company">28-Hour Vancouver Hackathon</div>
+						<div class="details">
+							<ul>
+								<li>Created a route optimization system for BestBuy to improve customer service efficiency by Routific API</li>
+							</ul>
+						</div>
+					</div>
+					<div class="hackathon">
+						<div class="upper-row">
+							<h3 class="job-title">nwHacks 2015</h3>
+							<div class="time">Mar 2015</div>
+						</div>
+						<div class="company">36-Hour Vancouver Hackathon</div>
+						<div class="details">
+							<ul>
+								<li>Designed and developed a web app to automatically generate summaries for articles posted by users</li>
+							</ul>
+						</div>
+					</div>
+				</section>
+			</div>
 
-  </body>
+			<div class="sidebar-wrapper">
+				<div class="card my-4">
+					<div class="card-header">
+						<img class="avatar" src="img/profile.jpg" alt="profile picture" />
+						<h1 class="name">Alice Luo</h1>
+						<h3 class="tagline">Full Stack Developer</h3>
+					</div>
+					<div class="card-body">
+						<div class="contact-container container-block">
+							<ul class="contact-list">
+								<li class="email"><i class="fas fa-envelope"></i>
+									<a href="mailto:alice.luoqian@gmail.com">alice.luoqian@gmail.com</a>
+								</li>
+								<li class="phone"><i class="fas fa-phone"></i>
+									<a href="tel:7788690713">778-869-0713</a>
+								</li>
+								<li class="website"><i class="fas fa-globe-americas"></i>
+									<a href="index.html">aliceluo1016.github.io</a>
+								</li>
+								<li class="linkedin"><i class="fab fa-linkedin"></i>
+									<a href="https://www.linkedin.com/in/aliceluoqian/">aliceluoqian</a>
+								</li>
+								<li class="github"><i class="fab fa-github"></i>
+									<a href="https://github.com/AliceLuo1016">AliceLuo1016</a>
+								</li>
+							</ul>
+						</div>
+						<div class="education-container container-block">
+							<h3 class="container-block-title">Education</h2>
+							<div class="item">
+								<h4 class="degree">Combined Major in Business and Computer Science </h4>
+								<h5 class="meta">University of British Columbia</h5>
+								<div class="time">Sept 2012 – May 2017</div>
+								<ul>
+									<li>• Received Outstanding International Student Award</li>
+									<li>• Secured patents of two functional board erasers</li>
+								</ul>
+							</div>
+						</div>
+						<div class="languages-container container-block">
+							<h2 class="container-block-title">
+								Languages
+							</h2>
+							<ul>
+								<li>English <span class="lang-desc">(Fluent)</span></li>
+								<li>Mandarin <span class="lang-desc">(Native)</span></li>
+							</ul>
+						</div>
+						<div class="interests-container container-block">
+							<h2 class="container-block-title">
+								Interests
+							</h2>
+							<ul>
+								<li>Travel</li>
+								<li>Certified Yoga Teacher</li>
+								<li>Stock Investment</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<hr>
+
+		<!--Footer-->
+		<div id="footer-placeholder"></div>
+
+		<!-- Header and footer scripts -->
+		<script>
+			$(function(){
+				$("#nav-placeholder").load("nav.html");
+			});
+		</script>
+
+		<script>
+			$(function(){
+				$("#footer-placeholder").load("footer.html");
+			});
+		</script>
+
+		<!-- Bootstrap core JavaScript -->
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+		<!-- Custom scripts for this template -->
+		<script src="js/clean-blog.min.js"></script>
+
+	</body>
 
 </html>
