--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Clean Blog</h1>
-              <span class="subheading">A Blog Theme by Start Bootstrap</span>
+              <h1>Sunete's Blog</h1>
+              <span class="subheading">记录生活点滴</span>
             </div>
           </div>
         </div>
