--- a/about.html
+++ b/about.html
@@ -6,12 +6,22 @@
 <meta name="description" content="">
 <meta name="author" content="Daniel Łaś">
 <title>Daniel Łaś Tech Blog</title>
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet'
 	type='text/css'>
 <link href="css/clean-blog.min.css" rel="stylesheet">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-12045869-7"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() {
+		dataLayer.push(arguments);
+	}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-12045869-7');
+</script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -52,12 +62,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 col-md-10 mx-auto">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio,
-					adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit,
-					doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam
-					soluta voluptatibus corporis atque iste neque sit tempora!</p>
+				<p>I'm software architect with solid management background.</p>
+				<blockquote class="blockquote text-center">At the bottom of my heart, I'm the programmer.</blockquote>
+				<p>I have been programming professionally for over 20 years. I'm most experienced in JVM ecosystem (Java programming language) but I'm not stranger to
+					modern JavaScript Web development and DevOps related issues.</p>
+				<p>Several years ago something important happened to me - I met functional programming. It changed my perspective so much, that I don't want to get
+					back.</p>
 			</div>
 		</div>
 	</div>
@@ -79,8 +89,8 @@
 			</div>
 		</div>
 	</footer>
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 	<script src="js/clean-blog.min.js"></script>
 </body>
 </html>
