--- a/example.html
+++ b/example.html
@@ -6,12 +6,22 @@
 <meta name="description" content="">
 <meta name="author" content="Daniel Łaś">
 <title>Daniel Łaś Tech Blog</title>
-<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet'
 	type='text/css'>
 <link href="../css/clean-blog.min.css" rel="stylesheet">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-12045869-7"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() {
+		dataLayer.push(arguments);
+	}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-12045869-7');
+</script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -129,8 +139,8 @@
 			</div>
 		</div>
 	</footer>
-	<script src="../vendor/jquery/jquery.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 	<script src="../js/clean-blog.min.js"></script>
 </body>
 </html>
