add recent job change

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 		<div class="wrapper">
 			<div class="main-wrapper">
 				<section class="section-profile">
-					<h2 class="mt-3 section-title">
+					<h2 class="section-title">
 						<span class="fa-stack fa-xs">
 							<i class="fas fa-circle fa-stack-2x"></i>
 							<i class="fas fa-user fa-stack-1x fa-inverse"></i>
@@ -107,6 +107,22 @@
 						</span>
 						Experiences
 					</h2>
+					<div class="work-experience">
+						<div class="meta">
+							<div class="upper-row">
+								<h3 class="job-title">Full Stack Developer</h3>
+								<div class="time">Nov 2018 – Now</div>
+							</div> 
+							<div class="company">Scotiabank, Toronto</div>
+						</div>
+						<div class="company-description">One of the largest banks in Canada, which serves more than 24 million customers in over 50 countries.</div>
+						<div class="details">
+							<ul>
+								<li>Delivered a restful web app connected to multiple databases successfully, with one month ahead of the schedule</li>
+								<li>Reverse engineered and repaired an outdated engine built in 2011 without sufficient ducmentation, and prepared the stage for future integration</li>
+							</ul>
+						</div>
+					</div>
 					<div class="work-experience">
 						<div class="meta">
 							<div class="upper-row">
@@ -272,7 +288,9 @@
 		<hr>
 
 		<!--Footer-->
-		<div id="footer-placeholder"></div>
+		<div class="col-lg-8 col-md-10 mx-auto">
+			<div id="footer-placeholder"></div>
+		</div>
 
 		<!-- Header and footer scripts -->
 		<script>
