--- a/nav.html
+++ b/nav.html
@@ -15,7 +15,7 @@
 					<a class="nav-link" href="about.html">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="post.html">Projects</a>
+					<a class="nav-link" href="projects.html">Projects</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="footprints.html">Footprints</a>
