--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
+<meta name="description" content="Functional Programming, Java, JavaScript, Software Architecture, Software Craftsmanship, Clean Code">
 <meta name="author" content="Daniel Łaś">
 <title>Daniel Łaś Tech Blog</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
 				<div class="col-lg-8 col-md-10 mx-auto">
 					<div class="site-heading">
 						<h1>Tech Blog</h1>
-						<span class="subheading">Daniel Łaś technology blog</span>
+						<span class="subheading">Functional Programming, Java, JavaScript, Software Architecture, Software Craftsmanship, Clean Code</span>
 					</div>
 				</div>
 			</div>
