--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,10 @@
 							</a>
 						</li>
 					</ul>
-					<p class="copyright text-muted">Copyright &copy; Daniel Łaś 2018</p>
+					<p class="copyright text-muted">
+						Copyright &copy; Daniel Łaś 2019, Look and feel forked from
+						<a href="https://startbootstrap.com/template-overviews/clean-blog/" target="blank">Clean Blog</a>
+					</p>
 				</div>
 			</div>
 		</div>
