--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet'
 	type='text/css'>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 <link href="css/clean-blog.min.css" rel="stylesheet">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-12045869-7"></script>
 <script>
@@ -95,6 +96,11 @@
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	<div class="alert text-center cookiealert">
+		We use cookies to ensure you get the best experience on our site.
+		<button class="btn btn-primary btn-sm acceptcookies">I agree</button>
+	</div>
+	<script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
 	<script src="js/clean-blog.min.js"></script>
 </body>
 </html>
