--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
 				<blockquote class="blockquote text-center">At the bottom of my heart, I'm the programmer.</blockquote>
 				<p>I have been programming professionally for over 20 years. I'm most experienced in JVM ecosystem (Java programming language) but I'm not stranger to
 					modern JavaScript Web development and DevOps related issues.</p>
-				<p>Several years ago something important happened to me - I met functional programming. It changed my perspective so much, that I don't want to get
-					back.</p>
+				<p>Several years ago something important happened to me - I met functional programming. It changed my perspective so much, that I don't want to get back
+					to my old habits.</p>
 			</div>
 		</div>
 	</div>
