--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 col-md-10 mx-auto">
+				<div class="col-md-10 mx-auto">
 					<div class="page-heading">
 						<h1>About Me</h1>
 						<span class="subheading">This is what I do.</span>
@@ -62,7 +62,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 col-md-10 mx-auto">
+			<div class="col-md-10 mx-auto">
 				<p>I'm software architect with solid management background.</p>
 				<blockquote class="blockquote text-center">At the bottom of my heart, I'm the programmer.</blockquote>
 				<p>I have been programming professionally for over 20 years. I'm most experienced in JVM ecosystem (Java programming language) but I'm not stranger to
