--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 col-md-10 mx-auto">
+				<div class="col-md-10 mx-auto">
 					<div class="page-heading">
 						<h1>Contact Me</h1>
 						<span class="subheading">Have questions?</span>
@@ -62,7 +62,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 col-md-10 mx-auto">
+			<div class="col-md-10 mx-auto">
 				<p>
 					Want to get in touch? Want to sparkle discussion? I'll be happy to answer.
 					<a href="mailto:lasdaniel@gmail.com" target="_blank">Send me an email</a>
