--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <hr>
   
-  <!-- Original Main Content -->
+  <!-- Original Main Content
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
@@ -138,6 +138,7 @@
             on July 8, 2019</p>
         </div>
         <hr>
+-->
         <!-- Pager -->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
