--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Welcome to creatrclasses.com I am excited to be doing this</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <h3>Welcome to Creatr!</h3>
+        <p>Hello and welcome to Creatr! Creatr is an all-in-one tutoring platform built for the modern age. Through realtime video streams and an interactive chat, Creatr strives to provide students with the tools they need to succeed. If you are trying to access a course or one of our free live streams, please login now. If you do not already have an account you can create one for free by clicking the “register” button.</p>
+        <h4>Who am I?</h4>
+        <p>My name is Daniel Whiteside, CEO and founder of Creatr. I am very excited to announce the launching of creatrclasses.com and the online classes we will be able to provide – this landmark means a lot to me personally as well as for education as a whole. I have personally worked as a tutor, test prep instructor, and educational coach since 2011, and even way back then I knew online educational platforms would change the way people learn. Now I get to be part of that process and contribute something important to my field. </p>
       </div>
     </div>
   </div>
