--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
     </div>
   </header>
 
-  <!-- Post Content -->
+  <!-- Body Content -->
   <article>
     <div class="container">
       <div class="row">
