--- a/maintemplate_2_cols.html
+++ b/maintemplate_2_cols.html
@@ -1,17 +1,17 @@
 <f:layout name="mainlayout" />
 <f:section name="content">
  <div class="row mb-3">
-    <div class="col-lg-8 col-md-10 mx-auto">
+    <div class="col-lg-12 col-md-12 mx-auto">
       {f:cObject(typoscriptObjectPath:'lib.subnav')->f:format.raw()}
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-8 col-md-10 mx-auto">
+    <div class="col-lg-12 col-md-12 mx-auto">
       <div class="row"> 
-            <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="col-lg-8 col-md-12 mx-auto">
                     <f:format.raw>{contentNormal}</f:format.raw>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto">
+            <div class="col-lg-4 col-md-12 mx-auto border-left">
                     <f:format.raw>{contentRight}</f:format.raw>
             </div>
       </div>
