--- a/maintemplate.html
+++ b/maintemplate.html
@@ -1,5 +1,6 @@
 <f:layout name="mainlayout" />
 <f:section name="content">
+<div class="container">
 <div class="row mb-3">
   <div class="col-lg-12 col-md-12 mx-auto">
     {f:cObject(typoscriptObjectPath:'lib.subnav')->f:format.raw()}
@@ -12,4 +13,5 @@
     </div>
   </div>
 </div>
+    </div>
 </f:section>
