--- a/maintemplate_2_cols.html
+++ b/maintemplate_2_cols.html
@@ -1,6 +1,7 @@
 <f:layout name="mainlayout" />
 <f:section name="content">
- <div class="row mb-3">
+<div class="container">
+<div class="row mb-3">
     <div class="col-lg-12 col-md-12 mx-auto">
       {f:cObject(typoscriptObjectPath:'lib.subnav')->f:format.raw()}
     </div>
@@ -20,4 +21,6 @@
       </div>
     </div>
   </div>
+  </div>
+  
 </f:section>
