--- a/maintemplate_3_cols_same_size.html
+++ b/maintemplate_3_cols_same_size.html
@@ -1,6 +1,7 @@
 <f:layout name="mainlayout" />
 <f:section name="content">
- <div class="row mb-3">
+  <div class="container">
+<div class="row mb-3">
     <div class="col-lg-12 col-md-12 mx-auto">
       {f:cObject(typoscriptObjectPath:'lib.subnav')->f:format.raw()}
     </div>
@@ -21,5 +22,6 @@
       <div class="clearfix">      
       </div>
     </div>
+  </div>
   </div>
 </f:section>
