--- a/maintemplate_3_cols_same_size_banner_jumbo_footer.html
+++ b/maintemplate_3_cols_same_size_banner_jumbo_footer.html
@@ -1,20 +1,22 @@
 <f:layout name="mainlayout" />
 <f:section name="content">
- <div class="row mb-3">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+              <f:format.raw>{contentJumbo}</f:format.raw> 
+        </div>
+        </div>
+<div class="container"> 
+<div class="row mb-3">
     <div class="col-lg-12 col-md-12 mx-auto">
       {f:cObject(typoscriptObjectPath:'lib.subnav')->f:format.raw()}
     </div>
   </div>
-  <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-        <f:format.raw>{contentJumbo}</f:format.raw> 
-  </div>
-</div>
+
   <div class="row">
         <div class="col-lg-12 col-md-12 mx-auto">
                 <f:format.raw>{contentTop}</f:format.raw>
         </div>
-      </div>
+  </div>
   <div class="row">
     <div class="col-lg-12 col-md-12 mx-auto">
       <div class="row"> 
@@ -31,5 +33,11 @@
       <div class="clearfix">      
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 mx-auto">
+              <f:format.raw>{contentFooter}</f:format.raw>
+      </div>
+</div>
+  </div>
   </div>
 </f:section>
